@@ -1,4 +1,4 @@
-// Messages are specific to Django's 'Messaging' system which adds messages into the session, 
+// Messages are specific to Django's 'Messaging' system which adds messages into the session,
 // for display on the next page visited. These appear as an animated banner at the top of the page.
 //
 // For inline help text, see typography.scss
